# uv-template

./: .gitignore  .pre-commit-config.yaml  Justfile  README.md  pyproject.toml  tree.txt
.github/workflows/: ci.yml
src/uv_template/: calculate.py
tests/: test_calculate.py  test_default.py
